[package]
name = "archipelago_rs"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0.17"
tungstenite = { version = "0.28", features = ["native-tls"] }
bitflags = { version = "2.10.0" }
serde_with = "3.16.1"
bimap = { version = "0.6.3", features = ["serde"] }
log = "0.4.29"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
libc = "0.2.178"
native-tls = "0.2.14"
smol = "2.0.2"

[dev-dependencies]
anyhow = "1.0"
eframe = "0.33.3"
egui = "0.33.3"
simplelog = "0.12.2"
