[package]
name = "archipelago_rs"
version = "1.0.0"
edition = "2024"

description = "A Rust client for the archipelago.gg multiworld randomizer"
repository = "https://github.com/nex3/archipelago_rs"
readme = "README.md"
license = "MIT"
keywords = ["archipelago", "randomizer"]
categories = ["api-bindings", "game-development"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0.17"
tungstenite = { version = "0.28", features = ["native-tls"] }
bitflags = { version = "2.10.0" }
serde_with = "3.16.1"
log = "0.4.29"
native-tls = "0.2.14"
smol = "2.0.2"
ustr = { version = "1.1.0", features = ["serde"] }
oneshot = "0.1.11"
rand = "0.9.2"
sanitise-file-name = "1.0.0"

[dev-dependencies]
anyhow = "1.0"
eframe = "0.33.3"
egui = "0.33.3"
simplelog = "0.12.2"
